--- a/TezosJ/pom.xml
+++ b/TezosJ/pom.xml
@@ -3,10 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>prx-gateway-service</artifactId>
+        <groupId>com.proofx.gateway</groupId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>org</groupId>
     <artifactId>tezosj</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+
     <build>
         <plugins>
             <plugin>
