--- a/TezosJ/pom.xml
+++ b/TezosJ/pom.xml
@@ -16,6 +16,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
 
     <build>
+        <finalName>${project.parent.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
