--- a/prx-gateway-core/pom.xml
+++ b/prx-gateway-core/pom.xml
@@ -245,7 +245,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org</groupId>
+            <groupId>com.proofx.gateway</groupId>
             <artifactId>tezosj</artifactId>
         </dependency>
     </dependencies>
