--- a/prx-gateway-api/pom.xml
+++ b/prx-gateway-api/pom.xml
@@ -27,7 +27,13 @@
       <artifactId>quarkus-resteasy-jackson</artifactId>
       <scope>provided</scope>
     </dependency>
-      <dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-vertx-web</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
           <groupId>io.swagger</groupId>
           <artifactId>swagger-annotations</artifactId>
           <version>1.5.24</version>
