--- a/prx-gateway-core/src/main/resources/application.properties
+++ b/prx-gateway-core/src/main/resources/application.properties
@@ -43,3 +43,10 @@ quarkus.cache.caffeine."contract-storage-cache".expire-after-write=5M
 %dev.quarkus.datasource.username=px
 %dev.quarkus.datasource.password=Password_1
 quarkus.datasource.db-kind = postgresql
+
+%dev.MJ_APIKEY_PUBLIC=public_key
+%dev.MJ_APIKEY_PRIVATE=private_key
+%dev.MJ_SENDER_EMAIL=no-reply@proofx.com
+
+%dev.ENVIRONMENT=dev
+%dev.VOUCHER_URI=http://localhost:8080/humanity/v1/voucher/
