--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
         <version>${project.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>com.mailjet</groupId>
+        <artifactId>mailjet-client</artifactId>
+        <version>5.1.1</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
