voucher template implementation

--- a/prx-gateway-core/pom.xml
+++ b/prx-gateway-core/pom.xml
@@ -252,6 +252,10 @@
             <artifactId>commons-exec</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.proofx.gateway</groupId>
             <artifactId>prx-gateway-api</artifactId>
         </dependency>
