--- a/prx-gateway-core/node-server/package.json
+++ b/prx-gateway-core/node-server/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@taquito/signer": "^6.3.5-beta.0",
-    "@taquito/taquito": "^6.3.5-beta.0",
+    "@taquito/rpc": "9.0.1",
+    "@taquito/signer": "9.0.1",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
@@ -36,9 +36,9 @@
     "request-promise": "^4.2.5",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.2",
-    "tezos-pack": "^0.1.6",
+    "tezos-pack": "^0.1.7",
     "tsc-watch": "^4.0.0",
-    "typescript": "^3.7.2"
+    "typescript": "^4.2.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
