--- a/kiss-gateway-api/pom.xml
+++ b/kiss-gateway-api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>kiss-gateway-service</artifactId>
     <groupId>ch.inacta.tezos.kiss</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>kiss-gateway-api</artifactId>
