--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>ch.inacta.tezos.kiss</groupId>
   <artifactId>kiss-gateway-service</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <packaging>pom</packaging>
 
@@ -70,13 +70,13 @@
       <dependency>
         <groupId>ch.inacta.tezos.kiss</groupId>
         <artifactId>kiss-gateway-api</artifactId>
-        <version>${project.version}</version>
+        <version>1.0.0</version>
       </dependency>
 
       <dependency>
         <groupId>ch.inacta.tezos.kiss</groupId>
         <artifactId>kiss-gateway-core</artifactId>
-        <version>${project.version}</version>
+        <version>1.0.0</version>
       </dependency>
 
       <dependency>
